--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!--Styles end-->
 
 </head>
-<body style="overflow: hidden">
+<body>
 
 <!-- Preview block-->
 <div class="preview">
@@ -25,92 +25,53 @@
       </h1>
     </div>
     <div class="pizza">
-      <img class="one" src="app/img/pizza.svg">
-      <img class="two" src="app/img/pizza.svg">
-      <img class="three" src="app/img/pizza.svg">
-      <img class="four" src="app/img/pizza.svg">
-      <img class="five" src="app/img/pizza.svg">
-      <img class="six" src="app/img/pizza.svg">
+      <img alt="piece-1" class="one" src="app/img/pizza.svg">
+      <img alt="piece-2" class="two" src="app/img/pizza.svg">
+      <img alt="piece-3" class="three" src="app/img/pizza.svg">
+      <img alt="piece-4" class="four" src="app/img/pizza.svg">
+      <img alt="piece-5" class="five" src="app/img/pizza.svg">
+      <img alt="piece-6" class="six" src="app/img/pizza.svg">
     </div>
   </div>
 </div>
 <!-- Preview block-->
 
-
 <!-- Wrapper start-->
 <div class="wrapper">
-  <main class="main">
+  <header class="header">
     <div class="container">
-      <section class="about">
-        <h1>Обо мне</h1>
-        <p>
-          <span class="span-custom">Митряков Денис</span> - 20 лет, самоучка, <span
-                class="span-custom">Front-end</span> разработчик.
-        </p>
-        <p>Заниматься веб-разработкой начал в <span class="span-custom">сентябре 2018</span> года.
-          Почти сразу устролися в <a href="http://hld.agency">digital-агенство</a>, на роль бэкендера. Освоил
-          <em>PHP</em>,
-          за ним <em>Yii2</em> , сделал
-          один внутренний проект - <a href="http://hld.agency">hld.agency</a> и один коммерческий - <a
-                  href="http://engineering-ra.ru/">РЦИ РА</a>. Теперь могу без проблем верстку превратить в рабочий с
-          хостинга сайт,
-          со своей админ-панелью.</p>
-        <p>
-          Еще раз убедился, что С-образные языки мне не по душе, отказался от роли бэкендера и отправился покорять
-          <em>front-end</em>.
-          Первая верстка макета, книги, youtube, практика, подкасты, статьи - всё это было не настолько полезно без
-          реальных проектов.
-          Наткнулся на ребят, которым нужен был верстальщик, после успешно выполненного
-          <a href="/projects/tajam/index.html">тестового</a>,
-          я стал получать от них небольшие проектики. Так я впервые познакомился с "фрилансом".
-        </p>
-        <p>
-          От каждого выполненного проекта я получил много опыта, по походу работы приходилось сталкиваться с многим
-          впервые и находить
-          способы решения. После завершения я понимал, что я мог бы сделать лучше, какие у меня пробелы в знаниях и
-          какие процессы
-          можно оптимизировать/автоматизировать. Я знаю, что каждый новый проект лучше и качественней предыдущего.
-        </p>
-        <p>Два года в университете(СибГУТИ) заложили основы программирования и алгоритмов(и не только). Сейчас это
-          позволяет легче глубже разобраться в языке
-          <span class="span-custom">JavaScript</span>. Самыми значимыми предметами были:
-          <em>cтруктуры и алгоритмы обработки данных</em>,
-          <em>объектно-ориентированное программирование</em>,
-          <em>Высшая математика(и все к ней относящиеся)</em>,
-          <em>программирование(C/C++)</em>,
-          <em>интернет-технологии</em>,
-          <em>информатика</em>,
-          <em>технологии разработки программного обеспечения</em>,
-          <em>технический англ. язык</em>.
-          Закрыв два курса, я отчислился по собственному желанию и пошел своим путем. Я знал, что смогу получать знания
-          самостоятельно:
-          направленно и гармонично с самим собой.
-        </p>
-        <p>Сейчас я продолжаю работать с digital-агенством и брать проекты с фриланса. Но это всего небольшая ступень
-          для
-          развития и устройства в хорошую компанию. Сердечко замирает, когда представляю, как работаю в команде,
-          где все процессы организованны, люди в теме и горят своим делом, вы пилите крутой качественный продукт,
-          которым
-          потом буду пользоваться тысячи, а то и миллионы людей.
-        </p>
-        <div class="soft-skill">
-          <h2>Текущий стек <span class="span-custom">технологий/языков</span>:</h2>
-          <ul class="soft-skill__list">
-            <li class="soft-skill__item">HTML5</li>
-            <li class="soft-skill__item">CSS3</li>
-            <li class="soft-skill__item">SASS</li>
-            <li class="soft-skill__item">JavaScript</li>
-            <li class="soft-skill__item">Jquery</li>
-            <li class="soft-skill__item">Gulp</li>
-            <li class="soft-skill__item">Git</li>
-            <li class="soft-skill__item">PHP</li>
-            <li class="soft-skill__item">Yii2</li>
-          </ul>
-        </div>
-      </section>
-      <section class="portfolio">
+      <div class="logo">
+        <a href="index.html">denisonepiece</a>
+      </div>
+      <nav class="nav">
+        <ul>
+          <li><a href="about.html">обо мне</a></li>
+          <li><a href="">работы</a></li>
+          <li><a href="workshop.html">мастерская</a></li>
+          <li><a href="">контакты</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main class="main">
+    <section class="header-section">
+      <div class="container">
+        <h1 class="header-section__title">Это сайт-портфолио <a href="about.html">Митрякова Дениса</a></h1>
+        <h1 class="header-section__title">Он front-end разработчик</h1>
+        <h1 class="header-section__title">Выполнил <a href="#">такие работы</a></h1>
+        <h1 class="header-section__title"><a href="workshop.html">Оборудовал мастерскую</a>, где много практикуется</h1>
+        <h1 class="header-section__title">Ведет соц. сети, где вы можете <a href="#">посмотреть на его жизнь</a></h1>
+        <h1 class="header-section__title">и по необходимости <a href="#"> связаться с ним</a></h1>
+      </div>
+      <div class="header-section__image">
+        <img src="app/img/pizza-full.svg" alt="bg-pizza">
+      </div>
+    </section>
+    <section class="portfolio">
+      <div class="container">
         <h1>Мои работы</h1>
-        <p class="sub-small">В каждой работе справа есть кнопка во всю высоту экрана для навигации между сделанными
+        <p class="sub-small">В каждой работе справа есть кнопка во всю высоту экрана для навигации между
+          сделанными
           страницами</p>
         <div class="case">
           <div class="subscription">
@@ -135,7 +96,8 @@
             </ul>
 
             <div class="case__links">
-              <a href="projects/altvpn/vpn.html" class="btn-visit"><img src="app/img/icon-link.svg" alt="">visit</a>
+              <a href="projects/altvpn/vpn.html" class="btn-visit"><img src="app/img/icon-link.svg"
+                                                                        alt="">visit</a>
             </div>
           </div>
           <img src="app/img/altvpn.jpg" alt="" class="case__image">
@@ -147,8 +109,10 @@
 
             <p>Работа с чужим кодом, создание новых страниц,
               разработка новых компонентов, доработка имеющихся.
-              Всё делал в стиле предыдущих разработчиков, использую ими созданную "архитектуру". Создание независимых
-              блоков и переиспользование старых. Сайт адаптивен только до 1020, всего сделано 10 страниц, каждая из них
+              Всё делал в стиле предыдущих разработчиков, использую ими созданную "архитектуру". Создание
+              независимых
+              блоков и переиспользование старых. Сайт адаптивен только до 1020, всего сделано 10 страниц,
+              каждая из них
               чем-то отличается в каждой были свои трудности.
               Обязательно загляните в этот проект!</p>
 
@@ -160,14 +124,16 @@
             </ul>
 
             <div class="case__links">
-              <a href="projects/dacha/login.html" class="btn-visit"><img src="app/img/icon-link.svg" alt="">visit</a>
+              <a href="projects/dacha/login.html" class="btn-visit"><img src="app/img/icon-link.svg"
+                                                                         alt="">visit</a>
             </div>
           </div>
         </div>
         <div class="case">
           <div class="subscription">
             <h2><span class="span-custom">Личный блог Вероники Агафоновой</span></h2>
-            <p>Самая обычная верстка - адаптивная, под каждую страницу было предоставленно по 5 макетов с разными
+            <p>Самая обычная верстка - адаптивная, под каждую страницу было предоставленно по 5 макетов с
+              разными
               разрешениями экранов.
               Это был первый многостраничный сайт сделанный с нуля(5 страниц).</p>
             <ul class="technology">
@@ -177,7 +143,8 @@
             </ul>
 
             <div class="case__links">
-              <a href="projects/veronika/blog.html" class="btn-visit"><img src="app/img/icon-link.svg" alt="">visit</a>
+              <a href="projects/veronika/blog.html" class="btn-visit"><img src="app/img/icon-link.svg"
+                                                                           alt="">visit</a>
             </div>
           </div>
           <img src="app/img/veronika.jpg" alt="" class="case__image">
@@ -186,12 +153,17 @@
           <img src="app/img/sea-battle.jpg" alt="" class="case__image">
           <div class="subscription">
             <h2><span class="span-custom">Морской бой</span></h2>
-            <p>После того как прошел курс по JS'у, прилетело приглашение на работу(Программист JS), дали тестовое
-              задание, его я конечно завалил, в принципе выполнил все условия и игрушка получилось рабочая. За 3 дня,
-              читая документацию по React'у и параллельно делая. Я понимал, что ничего не продумал, что были неокрепшие
-              знания в js'e, но всё таки до последнего пытался сделать, что в итоге и получилось, но этот код лучше не
+            <p>После того как прошел курс по JS'у, прилетело приглашение на работу(Программист JS), дали
+              тестовое
+              задание, его я конечно завалил, в принципе выполнил все условия и игрушка получилось
+              рабочая. За 3 дня,
+              читая документацию по React'у и параллельно делая. Я понимал, что ничего не продумал, что
+              были неокрепшие
+              знания в js'e, но всё таки до последнего пытался сделать, что в итоге и получилось, но этот
+              код лучше не
               видеть, я был как слепой котенок, но это было прорывом к любви и понимаю JS'а, важности ОПП,
-              проектирования и к старанию писать чистый код, используя актуальную методологию программирования.</p>
+              проектирования и к старанию писать чистый код, используя актуальную методологию
+              программирования.</p>
             <ul class="technology">
               <li>React</li>
               <li>JSX</li>
@@ -207,7 +179,8 @@
         <div class="another-cases">
           <h2>Другие немаловажные</h2>
           <ul class="another-cases__list">
-            <li><a href="projects/test-work-1/index.html">Ручная валиадция формы регистрации<span>ТЗ</span></a></li>
+            <li><a href="projects/test-work-1/index.html">Ручная валиадция формы регистрации<span>ТЗ</span></a>
+            </li>
             <li><a href="projects/lang-rating/index.html">Получение json с сервера<span>ТЗ</span></a></li>
             <li><a href="projects/lang-rating/index.html">Сайт-портфолио<span>frontend</span></a></li>
             <li><a href="projects/tajam/index.html">Tajam <span>Верстка</span></a></li>
@@ -215,8 +188,8 @@
             <li><a href="http://hld.agency/">HLD <span>Бэкенд</span></a></li>
           </ul>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
   </main>
   <aside class="aside">
     <div class="progress-bar">
