New about section and changes gulpfile

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!--Styles end-->
 
 </head>
-<body style="overflow: hidden">
+<body>
 
 <!-- Preview block-->
 <div class="preview">
@@ -35,78 +35,56 @@
   </div>
 </div>
 <!-- Preview block-->
-
-
 <!-- Wrapper start-->
 <div class="wrapper">
   <main class="main">
     <div class="container">
       <section class="about">
-        <h1>Обо мне</h1>
-        <p>
-          <span class="span-custom">Митряков Денис</span> - 20 лет, самоучка, <span
-                class="span-custom">Front-end</span> разработчик.
-        </p>
-        <p>Заниматься веб-разработкой начал в <span class="span-custom">сентябре 2018</span> года.
-          Почти сразу устролися в <a href="http://hld.agency">digital-агенство</a>, на роль бэкендера. Освоил
-          <em>PHP</em>,
-          за ним <em>Yii2</em> , сделал
-          один внутренний проект - <a href="http://hld.agency">hld.agency</a> и один коммерческий - <a
-                  href="http://engineering-ra.ru/">РЦИ РА</a>. Теперь могу без проблем верстку превратить в рабочий с
-          хостинга сайт,
-          со своей админ-панелью.</p>
-        <p>
-          Еще раз убедился, что С-образные языки мне не по душе, отказался от роли бэкендера и отправился покорять
-          <em>front-end</em>.
-          Первая верстка макета, книги, youtube, практика, подкасты, статьи - всё это было не настолько полезно без
-          реальных проектов.
-          Наткнулся на ребят, которым нужен был верстальщик, после успешно выполненного
-          <a href="/projects/tajam/index.html">тестового</a>,
-          я стал получать от них небольшие проектики. Так я впервые познакомился с "фрилансом".
-        </p>
-        <p>
-          От каждого выполненного проекта я получил много опыта, по походу работы приходилось сталкиваться с многим
-          впервые и находить
-          способы решения. После завершения я понимал, что я мог бы сделать лучше, какие у меня пробелы в знаниях и
-          какие процессы
-          можно оптимизировать/автоматизировать. Я знаю, что каждый новый проект лучше и качественней предыдущего.
-        </p>
-        <p>Два года в университете(СибГУТИ) заложили основы программирования и алгоритмов(и не только). Сейчас это
-          позволяет легче глубже разобраться в языке
-          <span class="span-custom">JavaScript</span>. Самыми значимыми предметами были:
-          <em>cтруктуры и алгоритмы обработки данных</em>,
-          <em>объектно-ориентированное программирование</em>,
-          <em>Высшая математика(и все к ней относящиеся)</em>,
-          <em>программирование(C/C++)</em>,
-          <em>интернет-технологии</em>,
-          <em>информатика</em>,
-          <em>технологии разработки программного обеспечения</em>,
-          <em>технический англ. язык</em>.
-          Закрыв два курса, я отчислился по собственному желанию и пошел своим путем. Я знал, что смогу получать знания
-          самостоятельно:
-          направленно и гармонично с самим собой.
-        </p>
-        <p>Сейчас я продолжаю работать с digital-агенством и брать проекты с фриланса. Но это всего небольшая ступень
-          для
-          развития и устройства в хорошую компанию. Сердечко замирает, когда представляю, как работаю в команде,
-          где все процессы организованны, люди в теме и горят своим делом, вы пилите крутой качественный продукт,
-          которым
-          потом буду пользоваться тысячи, а то и миллионы людей.
-        </p>
-        <div class="soft-skill">
-          <h2>Текущий стек <span class="span-custom">технологий/языков</span>:</h2>
-          <ul class="soft-skill__list">
-            <li class="soft-skill__item">HTML5</li>
-            <li class="soft-skill__item">CSS3</li>
-            <li class="soft-skill__item">SASS</li>
-            <li class="soft-skill__item">JavaScript</li>
-            <li class="soft-skill__item">Jquery</li>
-            <li class="soft-skill__item">Gulp</li>
-            <li class="soft-skill__item">Git</li>
-            <li class="soft-skill__item">PHP</li>
-            <li class="soft-skill__item">Yii2</li>
-          </ul>
+        <div class="about-aside">
+          <img class="photo" src="app/img/greyscale-square.png" alt="">
+          <div class="photo-sub">
+            <h2><span class="span-custom">Денис Митряков</span></h2>
+            <ul>
+              <li><b>Позиция:</b> Junior frontend-developer</li>
+              <li><b>Опыт работы:</b> больше года</li>
+              <li><b>Место проживания:</b> Горно-Алтайск</li>
+              <li><b>Стэк:</b>
+                <span class="soft-skill__item">HTML5</span>
+                <span class="soft-skill__item">CSS3</span>
+                <span class="soft-skill__item">JS</span>
+                <span class="soft-skill__item">Webpack</span>
+                <span class="soft-skill__item">Gulp</span>
+                <span class="soft-skill__item">SASS</span>
+                <span class="soft-skill__item">Git</span>
+                <span class="soft-skill__item">PHP</span>
+                <span class="soft-skill__item">Yii2</span>
+              </li>
+            </ul>
+          </div>
         </div>
+        <div class="about-content">
+          <h2>Программирование — часть моей жизни</h2>
+          <p>Начал с <em>pascal</em> в школе, <em>С/C++</em> в университете, <em>PHP</em> послужил дорогой в веб и
+            привел к<span class="span-custom">JavaScript</span>.
+            Написание кода стало частью жизнью, а к жизни я отношусь трепетно :)
+          </p>
+          <h2>Опыт</h2>
+          <p>Вебом занимаюсь год, за это время сделал 10 проектов, из которых я получил много опыта.
+            Выполнял тестовые работы и коммерческие проекты. Каждый проект был лучше другого, между проектами я
+            получал знания и пробовал что-то новое. Во время работы в digital-агенстве, принимал участие в переговорах с
+            заказчиком,
+            составление прототипа и ТЗ и запуском в продакшн.</p>
+          <h2>Фронтенд</h2>
+          <p>Попробовав фронт, я просто понял что это моё. Нравится работать с UI/UX, хочу чтобы он был приятным
+            и работал безошибочно. А код написан был чисто и правильно.</p>
+          <h2>JavaScript</h2>
+          <p>После низкоуровнего C++ и близкого к нему PHP, JS зашел на ура.
+            Я поддерживаю подход его освоения, с изучения основ и тонкостей,
+            поэтому сфокусирован на этом. И дальнейшее с ним знакомство, должно проходить параллельно с
+            практикой. Поэтому рад отдаться вам в рабство. С меня желание развиваться и учиться, с вас опыт и помощь :)
+          </p>
+        </div>
+
       </section>
       <section class="portfolio">
         <h1>Мои работы</h1>
