--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Denis Mitryakov | portfolio</title>
+  <title>Denis Mitryakov</title>
 
   <!--Styles-->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:700,300,300i,400,400i,500,500i,600,600i,,700i&display=swap"
         rel="stylesheet">
   <link rel="stylesheet" href="app/css/main.css">
   <!--Styles end-->
+
+  <link rel="icon" href="app/img/pizza.png" type="image/png">
 
 </head>
 <body>
@@ -65,7 +67,7 @@
         <div class="about-content">
           <h2>Программирование — часть моей жизни</h2>
           <p>Начал с <em>pascal</em> в школе, <em>С/C++</em> в университете, <em>PHP</em> послужил дорогой в веб и
-            привел к<span class="span-custom">JavaScript</span>.
+            привел к <span class="span-custom">JavaScript</span>.
             Написание кода стало частью жизнью, а к жизни я отношусь трепетно :)
           </p>
           <h2>Опыт</h2>
@@ -84,8 +86,8 @@
             практикой. Поэтому рад отдаться вам в рабство. С меня желание развиваться и учиться, с вас опыт и помощь :)
           </p>
         </div>
-
       </section>
+
       <section class="portfolio">
         <h1>Мои работы</h1>
         <p class="sub-small">В каждой работе справа есть кнопка во всю высоту экрана для навигации между сделанными
@@ -254,9 +256,6 @@
 </div>
 <!--Wrapper end-->
 
-<!-- Scripts start -->
 <script src="./app/main.js"></script>
-<!-- Scripts end -->
-
 </body>
 </html>
