--- a/projects/clicklife/ui-kit.html
+++ b/projects/clicklife/ui-kit.html
@@ -66,10 +66,10 @@
 
         <select>
           <option value="0">Список</option>
-          <option value="Сука">Сука</option>
-          <option value="Пидор">Пидор</option>
-          <option value="Чмо">Чмо</option>
-          <option value="Говно">Говно</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
         </select>
       </div>
       <div class="textarea">
