--- a/index.html
+++ b/index.html
@@ -92,6 +92,24 @@
         <h1>Мои работы</h1>
         <p class="sub-small">В каждой работе справа есть кнопка во всю высоту экрана для навигации между сделанными
           страницами</p>
+        <div class="case case_reverse">
+          <img src="app/img/clicklife.jpg" alt="" class="case__image">
+          <div class="subscription">
+            <h2><span class="span-custom">Clicklife</span></h2>
+            <p>Компонентная разработка с помощью связки webpack/pug.</p>
+
+            <ul class="technology">
+              <li>webpack</li>
+              <li>sass</li>
+              <li>pug</li>
+              <li>js</li>
+            </ul>
+
+            <div class="case__links">
+              <a href="https://github.com/denisonepiece/ClickLife" class="btn-visit"><img src="app/img/icon-link.svg" alt="">github</a>
+            </div>
+          </div>
+        </div>
         <div class="case">
           <div class="subscription">
             <h2><span class="span-custom">Altvpn</span></h2>
