--- a/projects/clicklife/settings.html
+++ b/projects/clicklife/settings.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
-    <title>Clicklife — ЛК-ред.комп.
+    <title>Настройки
     </title>
-  <link href="./css/common.css" rel="stylesheet"><link href="./css/profile-edit-company.css" rel="stylesheet"></head>
+  <link href="./css/common.css" rel="stylesheet"><link href="./css/settings.css" rel="stylesheet"></head>
   <body>
     <header class="header">
       <nav class="nav"><a class="logo" href="#"><svg width="139" height="22" viewBox="0 0 139 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -92,115 +92,63 @@
     </header>
     <main class="main">
       <div class="container">
-        <div class="wrapper">
-          <section class="information">
-            <h2 class="information__header">Привет, Денис!</h2>
-            <p class="information__sub">Это твой личный кабинет</p>
-            <form>
-              <div class="information-edit">
-                <div class="information-edit__photo">
-                  <label class="information-edit__file-input"><svg width="22" height="21" viewBox="0 0 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M11 8.88454C9.17813 8.88454 7.7 10.435 7.7 12.3461C7.7 14.2571 9.17813 15.8076 11 15.8076C12.8219 15.8076 14.3 14.2571 14.3 12.3461C14.3 10.435 12.8219 8.88454 11 8.88454ZM19.0667 3.88454H16.5L15.9156 2.24993C15.6292 1.45666 14.7354 0.807617 13.9333 0.807617H8.06667C7.26458 0.807617 6.37083 1.45666 6.08437 2.24993L5.5 3.88454H2.93333C1.31771 3.88454 0 5.26675 0 6.96146V17.7307C0 19.4254 1.31771 20.8076 2.93333 20.8076H19.0667C20.6823 20.8076 22 19.4254 22 17.7307V6.96146C22 5.26675 20.6823 3.88454 19.0667 3.88454ZM11 17.7307C8.16979 17.7307 5.86667 15.3148 5.86667 12.3461C5.86667 9.37733 8.16979 6.96146 11 6.96146C13.8302 6.96146 16.1333 9.37733 16.1333 12.3461C16.1333 15.3148 13.8302 17.7307 11 17.7307Z" fill="white"/>
-</svg>
-
-                    <input type="file" id="file">
-                  </label>
-                </div>
-                <div class="information-edit__fields">
-                  <div class="input">
-                    <input class="input__field" placeholder="Название компании" type="text">
-                    <div class="input__message"></div>
-                  </div>
-                  <div class="input">
-                    <input class="input__field" placeholder="Город*" type="text">
-                    <div class="input__message"></div>
-                  </div>
-                  <div class="input">
-                    <input class="input__field" placeholder="Адрес офиса компании" type="text">
-                    <div class="input__message"></div>
-                  </div>
-                  <div class="input">
-                    <input class="input__field" placeholder="ИНН" type="text">
-                    <div class="input__message"></div>
-                  </div>
-                  <div class="input">
-                    <input class="input__field" placeholder="Email" type="email">
-                    <div class="input__message"></div>
-                  </div>
-                  <div class="input">
-                    <input class="input__field" placeholder="Имя и Фамилия представителя*" type="text">
-                    <div class="input__message"></div>
-                  </div>
-                  <div class="phones-block">
-                    <div class="input-phone">
-                      <input class="input__field input-phone__field input-phone__field_messenger" type="tel" placeholder="Номер телефона">
-                      <div class="input-phone__messengers">
-                        <label class="messenger-checkbox">
-                          <input type="checkbox"><svg class="icon-whatsup" width="22" height="23" viewBox="0 0 22 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M10.7015 0.807617C5.00231 0.807617 0.381678 5.6093 0.381678 11.533C0.381678 13.5593 0.922803 15.4544 1.86255 17.0712L0 22.8253L5.71363 20.9243C7.1921 21.7738 8.89248 22.2584 10.7015 22.2584C16.4015 22.2584 21.0219 17.456 21.0219 11.533C21.0219 5.6093 16.4015 0.807617 10.7015 0.807617ZM15.8332 15.6062C15.5904 16.2366 14.4924 16.8119 14.0079 16.8384C13.5239 16.8653 13.5102 17.2313 10.8715 16.0307C8.23325 14.8299 6.64596 11.9101 6.52081 11.722C6.39557 11.5347 5.49881 10.1962 5.54719 8.84915C5.59589 7.50189 6.30017 6.86628 6.55154 6.60192C6.80263 6.33716 7.09051 6.28974 7.26629 6.28674C7.47407 6.2832 7.60864 6.28025 7.76241 6.2862C7.91604 6.29229 8.14681 6.25253 8.34661 6.80907C8.54632 7.36556 9.02433 8.73331 9.08547 8.87269C9.14657 9.01222 9.18439 9.17377 9.09026 9.3529C8.99585 9.53244 8.94752 9.64459 8.81055 9.7993C8.67283 9.95402 8.52084 10.1454 8.39799 10.2637C8.26098 10.3947 8.11786 10.5375 8.26192 10.8175C8.40588 11.0973 8.90257 12.0145 9.65926 12.7704C10.6318 13.7421 11.4704 14.0644 11.7285 14.2113C11.9873 14.3589 12.1417 14.3425 12.3022 14.1656C12.4619 13.9887 12.9891 13.3917 13.1748 13.1252C13.3604 12.858 13.5343 12.9103 13.7727 13.0107C14.011 13.1116 15.2816 13.8244 15.5405 13.9716C15.799 14.1185 15.9718 14.1942 16.0336 14.3107C16.0954 14.4277 16.0759 14.9757 15.8332 15.6062Z" fill="#1BD741"/>
-</svg>
-
-                        </label>
-                        <label class="messenger-checkbox">
-                          <input type="checkbox"><svg class="icon-viber" width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <path d="M19.5677 2.95257C18.9917 2.4495 16.6604 0.845671 11.4628 0.824172C11.4628 0.824172 5.33531 0.475888 2.35096 3.07297C0.690972 4.64669 0.105894 6.95568 0.0423977 9.81505C-0.0210992 12.6744 -0.0982025 18.032 5.34892 19.4853H5.35345L5.34892 21.704C5.34892 21.704 5.31263 22.6026 5.93853 22.7832C6.69142 23.0068 7.1359 22.3232 7.85704 21.5879C8.25163 21.1837 8.79589 20.5903 9.20862 20.1389C12.9368 20.4355 15.7987 19.7562 16.1252 19.6573C16.8781 19.4251 21.1369 18.9091 21.8263 13.5516C22.5429 8.02203 21.4816 4.5306 19.5677 2.95257ZM20.1981 13.1474C19.613 17.6192 16.1615 17.903 15.5266 18.0965C15.2544 18.1782 12.7372 18.7715 9.57599 18.578C9.57599 18.578 7.21754 21.274 6.48279 21.9749C6.24241 22.2028 5.97935 22.1813 5.98389 21.7298C5.98389 21.4331 6.00203 18.0449 6.00203 18.0449C5.99749 18.0449 5.99749 18.0449 6.00203 18.0449C1.3849 16.8323 1.65703 12.2702 1.70692 9.88385C1.75681 7.49746 2.23304 5.54105 3.63904 4.22531C6.16531 2.05391 11.3675 2.3764 11.3675 2.3764C15.7624 2.3936 17.8669 3.64914 18.3567 4.07052C19.9759 5.38626 20.8013 8.53371 20.1981 13.1474ZM13.8938 9.67316C13.9119 10.0429 13.3268 10.0687 13.3087 9.69895C13.2588 8.753 12.7917 8.29292 11.8301 8.24132C11.4401 8.21982 11.4764 7.66515 11.8619 7.68665C13.1273 7.75115 13.8303 8.43911 13.8938 9.67316ZM14.8145 10.159C14.8598 8.33592 13.6579 6.90839 11.3766 6.74929C10.9911 6.72349 11.0319 6.16882 11.4174 6.19462C14.048 6.37521 15.4494 8.09083 15.3996 10.1719C15.395 10.5417 14.8054 10.5245 14.8145 10.159ZM16.9462 10.7352C16.9507 11.105 16.3611 11.1093 16.3611 10.7395C16.3339 7.23517 13.8711 5.32606 10.8822 5.30456C10.4967 5.30026 10.4967 4.74989 10.8822 4.74989C14.2249 4.77139 16.9144 6.95998 16.9462 10.7352ZM16.4336 14.9533V14.9619C15.9438 15.7789 15.0276 16.6818 14.0843 16.3937L14.0752 16.3808C13.1182 16.1272 10.8641 15.0264 9.43993 13.9515C8.70518 13.4011 8.03393 12.7518 7.51688 12.1283C7.04973 11.5737 6.57803 10.9158 6.11995 10.1246C5.15389 8.46921 4.94072 7.72965 4.94072 7.72965C4.63685 6.83529 5.58476 5.96673 6.45104 5.50235H6.46011C6.87738 5.29596 7.2765 5.36476 7.54409 5.67004C7.54409 5.67004 8.10649 6.30641 8.34687 6.6203C8.57365 6.91269 8.87753 7.38136 9.03627 7.64365C9.31293 8.11233 9.14058 8.58961 8.86845 8.7874L8.3242 9.20018C8.04753 9.41087 8.08382 9.80215 8.08382 9.80215C8.08382 9.80215 8.89113 12.6959 11.9072 13.4269C11.9072 13.4269 12.32 13.4613 12.5422 13.199L12.9776 12.683C13.1862 12.425 13.6897 12.2616 14.184 12.5239C14.8508 12.8808 15.6989 13.4355 16.2613 13.9386C16.5788 14.1836 16.6514 14.5577 16.4336 14.9533Z" fill="#CDCDCD"/>
-</svg>
-
-                        </label>
-                        <label class="messenger-checkbox">
-                          <input type="checkbox"><svg class="icon-telegram" width="21" height="18" viewBox="0 0 21 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <path d="M7.58851 16.7935L7.90174 12.0384L16.438 4.23441C16.8123 3.89677 16.3558 3.73245 15.8582 4.03858L5.32254 10.7733L0.771726 9.33388C-0.211304 9.03001 -0.217968 8.3446 0.992769 7.85277L18.7273 0.922172C19.537 0.550769 20.319 1.11913 20.0091 2.37514L16.9889 16.7957C16.7779 17.8199 16.167 18.0652 15.3206 17.5925L10.7209 14.1486L8.50822 16.3275C8.25275 16.5819 8.04837 16.7935 7.58851 16.7935Z" fill="#2AA0D8"/>
-</svg>
-
-                        </label>
-                      </div>
-                    </div>
-                    <div class="add-phone-button">
-                      <button class="add-phone-button__button"><svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <path d="M5 0V10" stroke="#0EAA7E" stroke-width="2"/>
-    <path d="M10 5L-4.76837e-07 5" stroke="#0EAA7E" stroke-width="2"/>
-</svg>
-
-                      </button><span>Добавить номер телефона</span>
-                    </div>
-                  </div>
-                  <div class="input">
-                    <input class="input__field" placeholder="Логин Skype" type="text">
-                    <div class="input__message"></div>
-                  </div>
-                  <div class="input">
-                    <input class="input__field" placeholder="Ссылка Вконтакте" type="text">
-                    <div class="input__message"></div>
-                  </div>
-                  <div class="input">
-                    <input class="input__field" placeholder="Ссылка Facebook" type="text">
-                    <div class="input__message"></div>
-                  </div>
-                  <div class="input">
-                    <input class="input__field" placeholder="Ссылка Одноклассники" type="text">
-                    <div class="input__message"></div>
-                  </div>
-                      <button class="button button_border button_default">Сохранить</button>
-                      <button class="button button_border button_default button_cancel">Отмена</button>
-                </div>
-              </div>
-            </form>
-            <div class="information-edit-about">
-              <h5>Обо мне</h5>
-              <div class="textarea">
-                <textarea class="input__field textarea__field" placeholder="Информация о вас"></textarea><span class="textarea__counter">0/200</span>
-                <div class="input__message"></div>
-              </div>
-                  <button class="button button_border button_default">Сохранить</button>
+        <h2 class="page-title">Общее</h2>
+        <div class="settings">
+          <div class="password">
+            <h5>Изменить пароль</h5>
+            <div class="input">
+              <input class="input__field" placeholder="Старый пароль">
+              <div class="input__message"></div>
             </div>
-          </section>
+            <div class="input">
+              <input class="input__field" placeholder="Новый пароль">
+              <div class="input__message"></div>
+            </div>
+            <div class="input">
+              <input class="input__field" placeholder="Повторите новый пароль">
+              <div class="input__message"></div>
+            </div>
+                <button class="button button_border button_default button_green-fill">Изменить</button>
+          </div>
+          <div class="email">
+            <h5>Электронная почта</h5>
+            <!-- Если почта подтверждена-->
+            <input class="input_fixed" value="denisonepiece@icloud.com" type="text" readonly>
+            <!-- Нет почты-->
+            <p class="message">Вы можете привязать к странице ваш адрес эл.почты.<br> Это позволит защитить ваш аккаунт.</p>
+            <!-- Ввод почты-->
+            <div class="input">
+              <input class="input__field" placeholder="denisonepiece@icloud.com" type="email">
+              <div class="input__message"></div>
+            </div>
+            <div class="email__wait-sumbited">
+              <p class="message">На ваш электронный адрес ydgf@mail.ru было отправлено письмо со ссылкой для подтверждения вашей почты на ClickLife. Пройдите по ссылке и активируйте вашу электронную почту</p>
+                  <button class="button button_border button_send">Отправить новое письмо</button>
+                  <button class="button button_border button_send">Указать другую почту</button>
+            </div>
+                <button class="button button_border button_default button_green-fill">Добавить почту</button>
+          </div>
+          <div class="number">
+            <h5>Номер телефона</h5>
+            <!-- Если есть номер-->
+            <input class="input_fixed" value="79236656675" type="text" readonly>
+            <!-- Ввод номера-->
+            <div class="input">
+              <input class="input__field input-phone__field" type="tel" placeholder="Номер телефона">
+              <div class="input__message"></div>
+            </div>
+            <!-- Подтверждение-->
+            <div class="number__wait-sumbited">
+              <input class="input_fixed input_wait-sumbited" value="+7 (923) 665-66-75" type="text" readonly><span>Указать другой номер</span><span>Введите код из СМС</span>
+              <div class="input">
+                <input class="input__field input-phone__field" type="tel" placeholder="Номер телефона">
+                <div class="input__message"></div>
+              </div><span>Выслать код повторно</span>
+            </div>
+            <p>Вы можете привязать к странице ваш личный номер телефона.Это позволит защитить ваш аккаунт.</p>
+                <button class="button button_border button_default button_green-fill">Изменить</button>
+          </div>
         </div>
-        <aside class="aside"><a class="button button_border button_business">
-                Перевести <br> в бизнес-профиль<svg class="icon-lighting" width="15" height="16" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M14.2361 6.03121C14.1625 5.90632 14.0497 5.80129 13.9105 5.72777C13.7712 5.65424 13.6108 5.6151 13.4471 5.61468H9.01412V1.07066C9.02364 0.904567 8.96889 0.740412 8.85833 0.603538C8.74777 0.466664 8.58754 0.36468 8.40238 0.313327C8.22437 0.2633 8.03239 0.262738 7.85399 0.311721C7.67559 0.360705 7.51994 0.456714 7.4094 0.585968L0.316686 8.91666C0.22782 9.02637 0.174458 9.15419 0.162004 9.28718C0.149549 9.42017 0.178442 9.55361 0.245759 9.674C0.307751 9.81164 0.415442 9.93083 0.555613 10.0169C0.695784 10.103 0.862335 10.1523 1.03482 10.1587H5.46777V14.7027C5.46791 14.8624 5.52714 15.018 5.63701 15.1472C5.74688 15.2764 5.90176 15.3727 6.07951 15.4222C6.16859 15.4458 6.26112 15.4585 6.35436 15.46C6.49425 15.4604 6.63224 15.4324 6.75705 15.3784C6.88187 15.3245 6.98996 15.246 7.07249 15.1495L14.1652 6.81884C14.2607 6.70584 14.3179 6.57252 14.3304 6.43355C14.3429 6.29458 14.3103 6.15536 14.2361 6.03121Z" fill="#0EAA7E"/>
-</svg>
-</a>
-        </aside>
       </div>
     </main>
 <footer class="footer">
@@ -249,5 +197,5 @@
 </a></div>
   </div>
 </footer>
-  <script type="text/javascript" src="js/common.js"></script><script type="text/javascript" src="js/profile-edit-company.js"></script></body>
+  <script type="text/javascript" src="js/common.js"></script><script type="text/javascript" src="js/settings.js"></script></body>
 </html>
