--- a/projects/clicklife/task-blocked.html
+++ b/projects/clicklife/task-blocked.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
     <title>Задание - Только для ИП
     </title>
-  <link href="./css/common.css" rel="stylesheet"><link href="./css/task.css" rel="stylesheet"></head>
+  <link rel="shortcut icon" href="assets/favicon.ico"><link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png"><link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png"><link rel="manifest" href="assets/manifest.json"><meta name="mobile-web-app-capable" content="yes"><meta name="theme-color" content="#fff"><meta name="application-name" content="clicklife"><link rel="apple-touch-icon" sizes="57x57" href="assets/apple-touch-icon-57x57.png"><link rel="apple-touch-icon" sizes="60x60" href="assets/apple-touch-icon-60x60.png"><link rel="apple-touch-icon" sizes="72x72" href="assets/apple-touch-icon-72x72.png"><link rel="apple-touch-icon" sizes="76x76" href="assets/apple-touch-icon-76x76.png"><link rel="apple-touch-icon" sizes="114x114" href="assets/apple-touch-icon-114x114.png"><link rel="apple-touch-icon" sizes="120x120" href="assets/apple-touch-icon-120x120.png"><link rel="apple-touch-icon" sizes="144x144" href="assets/apple-touch-icon-144x144.png"><link rel="apple-touch-icon" sizes="152x152" href="assets/apple-touch-icon-152x152.png"><link rel="apple-touch-icon" sizes="167x167" href="assets/apple-touch-icon-167x167.png"><link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon-180x180.png"><link rel="apple-touch-icon" sizes="1024x1024" href="assets/apple-touch-icon-1024x1024.png"><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"><meta name="apple-mobile-web-app-title" content="clicklife"><link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 1)" href="assets/apple-touch-startup-image-320x460.png"><link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 2)" href="assets/apple-touch-startup-image-640x920.png"><link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href="assets/apple-touch-startup-image-640x1096.png"><link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" href="assets/apple-touch-startup-image-750x1294.png"><link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 3)" href="assets/apple-touch-startup-image-1182x2208.png"><link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)" href="assets/apple-touch-startup-image-1242x2148.png"><link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 1)" href="assets/apple-touch-startup-image-748x1024.png"><link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 1)" href="assets/apple-touch-startup-image-768x1004.png"><link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2)" href="assets/apple-touch-startup-image-1496x2048.png"><link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)" href="assets/apple-touch-startup-image-1536x2008.png"><link rel="icon" type="image/png" sizes="228x228" href="assets/coast-228x228.png"><meta name="msapplication-TileColor" content="#fff"><meta name="msapplication-TileImage" content="assets/mstile-144x144.png"><meta name="msapplication-config" content="assets/browserconfig.xml"><link rel="yandex-tableau-widget" href="assets/yandex-browser-manifest.json"><link href="./css/common.css" rel="stylesheet"><link href="./css/task.css" rel="stylesheet"></head>
   <body>
     <header class="header">
-      <nav class="nav"><a class="logo" href="#"><svg width="139" height="22" viewBox="0 0 139 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <nav class="nav"><a class="logo" href="profile.html"><svg width="139" height="22" viewBox="0 0 139 22" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path d="M42.2679 13.0284L40.2822 9.62929H34.2305C33.0012 6.70225 30.0699 4.625 26.6659 4.625C23.1672 4.625 20.1414 6.79667 19.0067 9.91255H26.3822L28.3679 13.0284L26.3822 15.7666H18.9121C20.0468 18.8825 23.0727 21.0542 26.5713 21.0542C29.9754 21.0542 32.9067 18.9769 34.1359 16.0499H40.1876L42.2679 13.0284Z"
           fill="#0EAA7E"/>
     <path d="M9.17184 21.0542C13.7152 21.0542 17.3984 17.3764 17.3984 12.8396C17.3984 8.3028 13.7152 4.625 9.17184 4.625C4.62846 4.625 0.945312 8.3028 0.945312 12.8396C0.945312 17.3764 4.62846 21.0542 9.17184 21.0542Z"
@@ -33,12 +33,11 @@
 </a>
         <ul class="nav__list">
           <!-- Для активного элемента меню добавить класс -is-active--->
-          <li class="nav__item"><a href="#">Создать задание</a></li>
-          <li class="nav__item"><a href="#">Задания</a></li>
+          <li class="nav__item"><a href="task-create.html">Создать задание</a></li>
+          <li class="nav__item -is-active-"><a href="task-list.html">Задания</a></li>
         </ul>
       </nav>
-      <div class="control-panel">
-            <button class="button button_border button_default">Оплатить тариф</button>
+      <div class="control-panel"><a class="button button_border button_default" href="tariff.html">Оплатить тариф</a>
         <div class="notice"><svg width="20" height="22" viewBox="0 0 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M19.6156 15.5671C18.7531 14.6751 17.1393 13.3332 17.1393 8.9375C17.1393 5.59883 14.7071 2.92617 11.4277 2.27047V1.375C11.4277 0.615742 10.7884 0 10 0C9.21161 0 8.57233 0.615742 8.57233 1.375V2.27047C5.29287 2.92617 2.86074 5.59883 2.86074 8.9375C2.86074 13.3332 1.2469 14.6751 0.384405 15.5671C0.116548 15.8443 -0.00220127 16.1756 3.08654e-05 16.5C0.00494156 17.2047 0.579493 17.875 1.43306 17.875H18.5669C19.4205 17.875 19.9955 17.2047 20 16.5C20.0022 16.1756 19.8835 15.8439 19.6156 15.5671ZM3.01475 15.8125C3.96207 14.6107 4.99778 12.6186 5.00269 8.96242C5.00269 8.95383 5.00002 8.94609 5.00002 8.9375C5.00002 6.27945 7.2384 4.125 10 4.125C12.7616 4.125 15 6.27945 15 8.9375C15 8.94609 14.9973 8.95383 14.9973 8.96242C15.0022 12.6191 16.0379 14.6111 16.9852 15.8125H3.01475ZM10 22C11.5768 22 12.8558 20.7689 12.8558 19.25H7.1442C7.1442 20.7689 8.42322 22 10 22Z" fill="black"/>
 </svg>
@@ -66,8 +65,8 @@
           <div class="control-panel__photo active"></div>
 <div class="header-menu">
   <ul class="header-menu__list">
-    <li class="header-menu__item"><a href="#">Профиль</a></li>
-    <li class="header-menu__item"><a href="#">Настройки</a></li>
+    <li class="header-menu__item"><a href="profile.html">Профиль</a></li>
+    <li class="header-menu__item"><a href="settings.html">Настройки</a></li>
     <li class="header-menu__item logout"><a href="#">
         Выход<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M8.01828 16C12.2009 16 15.6312 12.8044 16 8.7273L9.47606 8.7273L9.47606 10.9091C9.47606 11.2029 9.29827 11.4683 9.02639 11.5811C8.75371 11.6937 8.44032 11.6313 8.23184 11.4233L5.31616 8.51409C5.03106 8.22978 5.03106 7.77022 5.31616 7.48577L8.23184 4.57672C8.44032 4.36871 8.75371 4.30612 9.02639 4.41891C9.29828 4.53157 9.47606 4.79711 9.47606 5.09088L9.47606 7.2727L16 7.2727C15.6312 3.19563 12.2009 -3.3213e-07 8.01829 -6.97784e-07C3.58998 -1.08492e-06 -8.21717e-07 3.58182 -1.20796e-06 7.99993C-1.59422e-06 12.4182 3.58997 16 8.01828 16V16Z" fill="#CDCDCD"/>
@@ -80,13 +79,13 @@
       </div>
       <!-- Меню дублируется, нужно прописать все ссылки-->
       <div class="menu">
-        <div class="nav__item"><a href="#">Создать задание</a></div>
-        <div class="nav__item"><a href="#">Задания</a></div>
+        <div class="nav__item"><a href="task-create.html">Создать задание</a></div>
+        <div class="nav__item"><a href="task-list.html">Задания</a></div>
         <div class="separator"></div>
-        <div class="nav__item"><a href="#">Профиль</a></div>
-        <div class="nav__item"><a href="#">Тарифы</a></div>
-        <div class="nav__item"><a href="#">Мои избранные</a></div>
-        <div class="nav__item"><a href="#">Настройки</a></div>
+        <div class="nav__item"><a href="profile.html">Профиль</a></div>
+        <div class="nav__item"><a href="tariff.html">Тарифы</a></div>
+        <div class="nav__item"><a class="button-my-elect">Мои избранные</a></div>
+        <div class="nav__item"><a href="settings.html">Настройки</a></div>
         <div class="nav__item logout"><a href="#">Выход</a></div>
       </div>
     </header>
