--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Denis Mitryakov</title>
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css">
   <link rel="stylesheet" href="app/css/main.css">
   <link rel="icon" href="app/img/pizza.png" type="image/png">
 </head>
@@ -18,6 +19,7 @@
   <p>Делал фриланс-биржу <a href="http://click-life.ru/">click-life.ru</a>
     на проекте использовал связку технологий <strong>js + pug + sass</strong> бандлил всё с помощью
     <strong>webpack</strong></p>
+  <p></p>
 </main>
 </body>
 </html>
