--- a/index.html
+++ b/index.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Denis Mitryakov</title>
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css">
   <link rel="stylesheet" href="app/css/main.css">
   <link rel="icon" href="app/img/pizza.png" type="image/png">
 </head>
+
 <body>
-<main class="container">
-  <h1>Денис Митряков</h1>
-  <p>Я занимаюсь фронтендом с января 2019 года.</p>
-  <p>Сейчас работаю на проекте <a href="https://jeffit.ru/">Jeffit</a> в компании <a
-          href="https://brooma.ru/">Brooma</a>
-    на роли <strong> Angular-разработчика</strong>.</p>
-  <p>Делал фриланс-биржу <a href="http://click-life.ru/">click-life.ru</a>
-    на проекте использовал связку технологий <strong>js + pug + sass</strong> бандлил всё с помощью
-    <strong>webpack</strong></p>
-  <p></p>
-</main>
+  <main class="container">
+    <div class="about">
+      <img src="app/img/denis.jpg">
+      <div class="text">
+        <h1>Денис Митряков</h1>
+        <p>В вебе с сентября 2018 года.</p>
+        <p>Живу в Новосибирске, в Академгородке.</p>
+        <p>Сейчас работаю на проекте <a target="_blank" href="https://jeffit.ru/">Jeffit</a> в компании <a target="_blank" href="https://brooma.ru/">Brooma</a>
+          на роли <strong> frontend-разработчика</strong>.</p>
+        <p>Делал фриланс-биржу <a target="_blank" href="http://click-life.ru/">click-life.ru</a>
+      </div>
+    </div>
+    <div class="socials">
+      <a href="https://twitter.com/denisonepiece" target="_blank">Twitter</a>,
+      <a href="tel: +79236656675" target="_blank">+79236656675 (tg/ws)</a>
+    </div>
+  </main>
 </body>
+
 </html>
