Добавил адаптив для сайта-портфоли

--- a/index.html
+++ b/index.html
@@ -2,32 +2,31 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Denis Mitryakov</title>
-  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="app/css/main.css">
-  <link rel="icon" href="app/img/pizza.png" type="image/png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Denis Mitryakov</title>
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="app/css/main.css">
+    <link rel="icon" href="app/img/pizza.png" type="image/png">
 </head>
 
 <body>
-  <main class="container">
-    <div class="about">
-      <img src="app/img/denis.jpg">
-      <div class="text">
-        <h1>Денис Митряков</h1>
-        <p>В вебе с сентября 2018 года.</p>
-        <p>Живу в Новосибирске, в Академгородке.</p>
-        <p>Сейчас работаю на проекте <a target="_blank" href="https://jeffit.ru/">Jeffit</a> в компании <a target="_blank" href="https://brooma.ru/">Brooma</a>
-          на роли <strong> frontend-разработчика</strong>.</p>
-        <p>Делал фриланс-биржу <a target="_blank" href="http://click-life.ru/">click-life.ru</a>
-      </div>
-    </div>
-    <div class="socials">
-      <a href="https://twitter.com/denisonepiece" target="_blank">Twitter</a>,
-      <a href="tel: +79236656675" target="_blank">+79236656675 (tg/ws)</a>
-    </div>
-  </main>
+    <main class="container">
+        <div class="about">
+            <img src="app/img/denis.jpg">
+            <div class="text">
+                <h1>Денис Митряков</h1>
+                <p>В вебе с сентября 2018 года.</p>
+                <p>Живу в Новосибирске, в Академгородке.</p>
+                <p>Сейчас работаю на проекте <a target="_blank" href="https://jeffit.ru/">Jeffit</a> в компании <a target="_blank" href="https://brooma.ru/">Brooma</a> на роли <strong> frontend-разработчика</strong>.</p>
+                <p>Делал фриланс-биржу <a target="_blank" href="http://click-life.ru/">click-life.ru</a>
+            </div>
+        </div>
+        <div class="socials">
+            <a href="https://twitter.com/denisonepiece" target="_blank">Twitter</a>,
+            <a href="tel: +79236656675" target="_blank">+79236656675 (tg/ws)</a>
+        </div>
+    </main>
 </body>
 
 </html>
